--- a/package.json
+++ b/package.json
@@ -14,9 +14,6 @@
     },
     "dependencies": {
         "@google/generative-ai": "^0.1.3",
-        "duck-duck-scrape": "^2.2.5",
-        "jsdom": "^23.2.0",
-        "selenium-webdriver": "^4.16.0",
         "@headlessui/react": "^1.7.18",
         "@hookform/resolvers": "^3.3.4",
         "@kinde-oss/kinde-auth-nextjs": "^2.1.0",
@@ -39,14 +36,18 @@
         "chalk": "^4.1.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "dotenv": "^16.4.5",
+        "duck-duck-scrape": "^2.2.5",
         "embla-carousel-react": "^8.0.0-rc19",
         "fs": "^0.0.1-security",
+        "jsdom": "^23.2.0",
         "lucide-react": "^0.303.0",
         "next": "^14.0.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.49.2",
         "readline": "^1.3.0",
+        "selenium-webdriver": "^4.16.0",
         "server-only": "^0.0.1",
         "tailwind-merge": "^2.2.0",
         "tailwindcss-animate": "^1.0.7",
